tests/errors/program_without_line_02.f90
print *, "OK"
contains
print *, "OK"
end
